--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-1.42MB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇺🇸 美国-317.6KB/s(Youtube:不良林), server: fhcamd1.gaox.ml, port: 443, type: trojan, password: e23f408a-012e-4030-8b31-02022031cb50, sni: fhcamd1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.34MB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇭🇰 香港-10.54MB/s(Youtube:不良林), server: hk-5.netflixssr.com, port: 644, type: vmess, uuid: 3107fc75-f61d-30aa-85b0-2b9861cfd485, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v1/stream, ws-headers: {Host: hk-5.netflixssr.com}}
-  - {name: 🇨🇳 中国-226.2KB/s(Youtube:不良林), server: iplc.wenzhoucloud.trojanv2ray.online, port: 20005, type: vmess, uuid: 820aa5e5-4df6-4aaa-90a5-1cf80e32f238, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /iqiyi, ws-headers: {Host: iplc.wenzhoucloud.trojanv2ray.online}}
-  - {name: 🇮🇳 印度-989.9KB/s(Youtube:不良林), server: jgwhdlb1.gaox.ml, port: 443, type: trojan, password: e05c749b-7c6b-41b8-9c71-9dcf685edf4a, sni: jgwhdlb1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-399.6KB/s(Youtube:不良林), server: 51.81.223.29, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-3.09MB/s(Youtube:不良林), server: 158.101.74.69, port: 31939, type: vmess, uuid: f130c826-40d9-44fb-be3d-75ebcb750d12, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.19MB/s(Youtube:不良林), server: 625us.ok365.cyou, port: 443, type: trojan, password: ef6c7fc6-6551-472b-921c-8f28606785de, sni: 625us.ok365.cyou, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-1.43MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-5.02MB/s(Youtube:不良林), server: 152.69.197.60, port: 1069, type: vmess, uuid: ac8e26fe-8150-4b60-ae64-82fc77eba2cf, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 未知国家-2.75MB/s(Youtube:不良林), server: v47.v2dns.bar, port: 2052, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v47-unlimitndxd, ws-headers: {Host: v47.v2dns.bar}}
+  - {name: 🇺🇸 美国-3.06MB/s(Youtube:不良林), server: v05.ssrsub.com, port: 153, type: vmess, uuid: 8fefb1b5-bee7-4736-8e00-cad32ab113d1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v05.ssrsub.com}}
+  - {name: 🇦🇺 澳大利亚-2.16MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.17MB/s(Youtube:不良林), server: usfree2.jiantian.xyz, port: 32462, type: trojan, password: cb5e2135-4d64-4454-be98-5bae4f2618d1, sni: usfree2.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇻🇳 越南-1.40MB/s(Youtube:不良林), server: hcmn4.sos4g.xyz, port: 80, type: vmess, uuid: 88feb3a4-8dd9-4001-91d6-9cceabca5a4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /sos4g.xyz, ws-headers: {Host: hcmn4.sos4g.xyz}}
+  - {name: 🇭🇰 香港-14.79MB/s(Youtube:不良林), server: 182.160.12.239, port: 45524, type: vmess, uuid: a265dcb2-04a3-48c0-a703-fad0e008d474, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-608.1KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-447.3KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-317.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
-      - 🇭🇰 香港-10.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-226.2KB/s(Youtube:不良林)
-      - 🇮🇳 印度-989.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-399.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.09MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.19MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
+      - 未知国家-2.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.40MB/s(Youtube:不良林)
+      - 🇭🇰 香港-14.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-608.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-447.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-317.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
-      - 🇭🇰 香港-10.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-226.2KB/s(Youtube:不良林)
-      - 🇮🇳 印度-989.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-399.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.09MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.19MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
+      - 未知国家-2.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.40MB/s(Youtube:不良林)
+      - 🇭🇰 香港-14.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-608.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-447.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-317.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
-      - 🇭🇰 香港-10.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-226.2KB/s(Youtube:不良林)
-      - 🇮🇳 印度-989.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-399.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.09MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.19MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
+      - 未知国家-2.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.40MB/s(Youtube:不良林)
+      - 🇭🇰 香港-14.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-608.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-447.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-10.54MB/s(Youtube:不良林)
+      - 🇭🇰 香港-14.79MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-317.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
-      - 🇭🇰 香港-10.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-226.2KB/s(Youtube:不良林)
-      - 🇮🇳 印度-989.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-399.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.09MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.19MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
+      - 未知国家-2.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.40MB/s(Youtube:不良林)
+      - 🇭🇰 香港-14.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-608.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-447.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-317.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
-      - 🇭🇰 香港-10.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-226.2KB/s(Youtube:不良林)
-      - 🇮🇳 印度-989.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-399.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.09MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.19MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
+      - 未知国家-2.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.40MB/s(Youtube:不良林)
+      - 🇭🇰 香港-14.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-608.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-447.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-317.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
-      - 🇭🇰 香港-10.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-226.2KB/s(Youtube:不良林)
-      - 🇮🇳 印度-989.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-399.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.09MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.19MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
+      - 未知国家-2.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.40MB/s(Youtube:不良林)
+      - 🇭🇰 香港-14.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-608.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-447.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.42MB/s(Youtube:不良林)
-      - 🇺🇸 美国-317.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.34MB/s(Youtube:不良林)
-      - 🇭🇰 香港-10.54MB/s(Youtube:不良林)
-      - 🇨🇳 中国-226.2KB/s(Youtube:不良林)
-      - 🇮🇳 印度-989.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-399.6KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.09MB/s(Youtube:不良林)
       - 🇺🇸 美国-4.19MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.43MB/s(Youtube:不良林)
-      - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
+      - 未知国家-2.75MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
+      - 🇻🇳 越南-1.40MB/s(Youtube:不良林)
+      - 🇭🇰 香港-14.79MB/s(Youtube:不良林)
+      - 🇺🇸 美国-608.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-447.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
