--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,15 +6,15 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇯🇵 日本-3.09MB/s(Youtube:不良林), server: 158.101.74.69, port: 31939, type: vmess, uuid: f130c826-40d9-44fb-be3d-75ebcb750d12, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.19MB/s(Youtube:不良林), server: 625us.ok365.cyou, port: 443, type: trojan, password: ef6c7fc6-6551-472b-921c-8f28606785de, sni: 625us.ok365.cyou, skip-cert-verify: true}
-  - {name: 未知国家-2.75MB/s(Youtube:不良林), server: v47.v2dns.bar, port: 2052, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v47-unlimitndxd, ws-headers: {Host: v47.v2dns.bar}}
-  - {name: 🇺🇸 美国-3.06MB/s(Youtube:不良林), server: v05.ssrsub.com, port: 153, type: vmess, uuid: 8fefb1b5-bee7-4736-8e00-cad32ab113d1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v05.ssrsub.com}}
-  - {name: 🇦🇺 澳大利亚-2.16MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.17MB/s(Youtube:不良林), server: usfree2.jiantian.xyz, port: 32462, type: trojan, password: cb5e2135-4d64-4454-be98-5bae4f2618d1, sni: usfree2.jiantian.xyz, skip-cert-verify: true}
-  - {name: 🇻🇳 越南-1.40MB/s(Youtube:不良林), server: hcmn4.sos4g.xyz, port: 80, type: vmess, uuid: 88feb3a4-8dd9-4001-91d6-9cceabca5a4b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /sos4g.xyz, ws-headers: {Host: hcmn4.sos4g.xyz}}
-  - {name: 🇭🇰 香港-14.79MB/s(Youtube:不良林), server: 182.160.12.239, port: 45524, type: vmess, uuid: a265dcb2-04a3-48c0-a703-fad0e008d474, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-608.1KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
   - {name: 🇺🇸 美国-447.3KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-2.25MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.66MB/s(Youtube:不良林), server: iplc.wenzhoucloud.trojanv2ray.online, port: 20005, type: vmess, uuid: 820aa5e5-4df6-4aaa-90a5-1cf80e32f238, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /iqiyi, ws-headers: {Host: iplc.wenzhoucloud.trojanv2ray.online}}
+  - {name: 🇯🇵 日本-5.02MB/s(Youtube:不良林), server: 152.69.197.60, port: 1069, type: vmess, uuid: ac8e26fe-8150-4b60-ae64-82fc77eba2cf, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.51MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: eecb88a3-d8c1-4fc3-bea0-8a4f13aa42be, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-601.1KB/s(Youtube:不良林), server: 51.81.223.6, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-873.2KB/s(Youtube:不良林), server: 43.155.101.188, port: 2292, type: vmess, uuid: 7731d35e-ddf5-47cb-f841-fa7d6e714735, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-4.00MB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -22,30 +22,30 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇯🇵 日本-3.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.19MB/s(Youtube:不良林)
-      - 未知国家-2.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.40MB/s(Youtube:不良林)
-      - 🇭🇰 香港-14.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-608.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-447.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-601.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-873.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.00MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
       - 🇯🇵 日本-3.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.19MB/s(Youtube:不良林)
-      - 未知国家-2.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.40MB/s(Youtube:不良林)
-      - 🇭🇰 香港-14.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-608.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-447.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-601.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-873.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.00MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -53,20 +53,20 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇯🇵 日本-3.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.19MB/s(Youtube:不良林)
-      - 未知国家-2.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.40MB/s(Youtube:不良林)
-      - 🇭🇰 香港-14.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-608.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-447.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-601.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-873.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.00MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-14.79MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.00MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
@@ -74,30 +74,30 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇯🇵 日本-3.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.19MB/s(Youtube:不良林)
-      - 未知国家-2.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.40MB/s(Youtube:不良林)
-      - 🇭🇰 香港-14.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-608.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-447.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-601.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-873.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.00MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇯🇵 日本-3.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.19MB/s(Youtube:不良林)
-      - 未知国家-2.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.40MB/s(Youtube:不良林)
-      - 🇭🇰 香港-14.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-608.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-447.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-601.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-873.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.00MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -105,15 +105,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇯🇵 日本-3.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.19MB/s(Youtube:不良林)
-      - 未知国家-2.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.40MB/s(Youtube:不良林)
-      - 🇭🇰 香港-14.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-608.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-447.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-601.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-873.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.00MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,15 +130,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇯🇵 日本-3.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.19MB/s(Youtube:不良林)
-      - 未知国家-2.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.16MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.17MB/s(Youtube:不良林)
-      - 🇻🇳 越南-1.40MB/s(Youtube:不良林)
-      - 🇭🇰 香港-14.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-608.1KB/s(Youtube:不良林)
       - 🇺🇸 美国-447.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-601.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-873.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
+      - 🇭🇰 香港-4.00MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
