--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,68 +5,68 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-2.25MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇨🇳 中国-1.66MB/s(Youtube:不良林), server: iplc.wenzhoucloud.trojanv2ray.online, port: 20005, type: vmess, uuid: 820aa5e5-4df6-4aaa-90a5-1cf80e32f238, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /iqiyi, ws-headers: {Host: iplc.wenzhoucloud.trojanv2ray.online}}
-  - {name: 🇬🇧 英国-3.54MB/s(Youtube:不良林), server: 88.150.137.201, port: 1021, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 🇺🇸 美国-3.06MB/s(Youtube:不良林), server: v05.ssrsub.com, port: 153, type: vmess, uuid: 8fefb1b5-bee7-4736-8e00-cad32ab113d1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v05.ssrsub.com}}
-  - {name: 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-4.00MB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
+  - {name: 🇺🇸 美国-601.1KB/s(Youtube:不良林), server: 51.81.223.6, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-5.06MB/s(Youtube:不良林), server: 152.69.197.60, port: 1069, type: vmess, uuid: ac8e26fe-8150-4b60-ae64-82fc77eba2cf, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.51MB/s(Youtube:不良林), server: usfree1.jiantian.xyz, port: 23425, type: trojan, password: eecb88a3-d8c1-4fc3-bea0-8a4f13aa42be, sni: usfree1.jiantian.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-362.2KB/s(Youtube:不良林), server: 625us.ok365.cyou, port: 443, type: trojan, password: ef6c7fc6-6551-472b-921c-8f28606785de, sni: 625us.ok365.cyou, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.23MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇭🇰 香港-3.91MB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
   - {name: 🇭🇰 香港-20.33MB/s(Youtube:不良林), server: 104.208.84.160, port: 12369, type: trojan, password: 9ff4a104-d00e-4867-96e7-6f5f63070005, skip-cert-verify: true}
   - {name: 🇯🇵 日本-2.73MB/s(Youtube:不良林), server: 85.208.108.94, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇺🇸 美国-5.21MB/s(Youtube:不良林), server: jgwdb2.gaox.ml, port: 443, type: trojan, password: c19d1432-8b3e-4818-8837-3d160cf65908, sni: jgwdb2.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-601.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-362.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.91MB/s(Youtube:不良林)
       - 🇭🇰 香港-20.33MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.73MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-601.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-362.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.91MB/s(Youtube:不良林)
       - 🇭🇰 香港-20.33MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.73MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-601.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-362.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.91MB/s(Youtube:不良林)
       - 🇭🇰 香港-20.33MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.73MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-4.00MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.91MB/s(Youtube:不良林)
       - 🇭🇰 香港-20.33MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
@@ -74,47 +74,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-601.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-362.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.91MB/s(Youtube:不良林)
       - 🇭🇰 香港-20.33MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.73MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-601.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-362.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.91MB/s(Youtube:不良林)
       - 🇭🇰 香港-20.33MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.73MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-601.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-362.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.91MB/s(Youtube:不良林)
       - 🇭🇰 香港-20.33MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.73MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-2.25MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.66MB/s(Youtube:不良林)
-      - 🇬🇧 英国-3.54MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.06MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.68MB/s(Youtube:不良林)
-      - 🇭🇰 香港-4.00MB/s(Youtube:不良林)
+      - 🇺🇸 美国-601.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-5.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.51MB/s(Youtube:不良林)
+      - 🇺🇸 美国-362.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.23MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.91MB/s(Youtube:不良林)
       - 🇭🇰 香港-20.33MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.73MB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-2.58MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.21MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
